﻿v3.3.0

- New Analyzer: PH_P013 - Discouraged EntityFramework Method
- Renamed Analyzer: PH_P003 - Discouraged Thread Method (was Discouraged Method)


------------------

v3.2.1

- Updated vsixmanifest to work in Visual Studio 2022 Preview 1.


------------------

v3.2.0

- Improved Analyzer: PH_S019 - Now matches the return-type by default


------------------

v3.1.0

- New Analyzer: PH_B015 - Disposed Task Instead of Value
- Improved Analyzer: PH_S007 - Now respects activation frames
- Improved Analyzer: PH_P007 - Now reports default expressions where a token is available
- Improved Analyzer: PH_S019 - Now ignores EF Core's Add and AddRange of DbSet and DbContext by default
- Improved Analyzer: PH_S025 - Now supports lambda expressions and respects activation frames


------------------

v3.0.0

- Upgraded the .NET Compiler Platform (Roslyn) to version 3.3.1
- Raised the minimum required Visual Studio version to 16.3
- Added foundation for more fine-granular analyzer configuration
- New Analyzer: PH_B014 - Await On Conditional Access
- New Analyzer: PH_S032 - Throws in Potentially Async Method
- New Analyzer: PH_P012 - Prefer Slim Synchronization
- Improved Analyzer: PH_B010 - Now ignores volatile fields by default
- Improved Analyzer: PH_S005 - Ignoring interface implementations and method overrides is now configurable


------------------

v2.3.0

- New Analyzer: PH_B013 - Null-Check Against Task Instead of Value
- New Analyzer: PH_P011 - Replace With Async Stream
- New Analyzer: PH_S031 - Monitor.Wait Inside Async Method or Task
- Improved Analyzer: PH_S019 - Now respects activation frames
- Improved Analyzer: PH_B009 - Now ignores fields of foreign classes
- Improved Analyzer: PH_B010 - Now ignores fields of foreign classes
- Fixed Analyzer: PH_S002 - No longer crashes when the sync object is declared in a foreign file


------------------

v2.2.0

- New Analyzer: PH_S029 - ThreadLocal in Async Method
- New Analyzer: PH_S030 - Async Void Method Invocation