@@ -18,7 +18,8 @@
     <RepositoryType>git</RepositoryType>
     <Description>ParallelHelper is a static code analyzer that helps to identify concurrency related issues. Moreover, it provides hints to improve the robustness of code with concurrency in mind.</Description>
     <PackageReleaseNotes>- New Analyzer: PH_P013 - Discouraged EntityFramework Method
-- Renamed Analyzer: PH_P003 - Discouraged Thread Method (was Discouraged Method)</PackageReleaseNotes>
+- Renamed Analyzer: PH_P003 - Discouraged Thread Method (was Discouraged Method)
+- Improved Analyzer: PH_B014 - Now reports await of as-expressions</PackageReleaseNotes>
     <Copyright>Copyright (C) 2019 - 2021  Christoph Amrein, Concurrency Lab, Eastern Switzerland University of Applied Sciences, Switzerland</Copyright>
     <PackageTags>C#, Parallel, Asynchronous, Concurrency, Bugs, Best Practices, TPL, Task, QC, Static Analysis, async, await</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
